SplCompiler/tests/errors/prg_identifier_too_long.spl
IdentifierTooLongbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb:
DECLARATIONS
    a OF TYPE INTEGER;
    b OF TYPE INTEGER;
    c OF TYPE INTEGER;
CODE
    NEWLINE;
ENDP IdentifierTooLongbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.
